vm-builder-templates/apps/external-secrets/k8s-base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  labels:
    name: external-secrets
    app.kubernetes.io/name: external-secrets
    app.kubernetes.io/component: secrets-operator
    app.kubernetes.io/part-of: golden-master
