vm-builder-templates/apps/external-secrets/k8s-base/eso-cert-controller.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets-cert-controller
  namespace: external-secrets
  labels:
    app.kubernetes.io/name: external-secrets-cert-controller
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/version: "v0.9.13"
    app.kubernetes.io/component: cert-controller
    app.kubernetes.io/part-of: golden-master
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-cert-controller
      app.kubernetes.io/instance: external-secrets
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-secrets-cert-controller
        app.kubernetes.io/instance: external-secrets
        app.kubernetes.io/version: "v0.9.13"
        app.kubernetes.io/component: cert-controller
        app.kubernetes.io/part-of: golden-master
    spec:
      serviceAccountName: external-secrets-cert-controller
      automountServiceAccountToken: true
      hostNetwork: false
      containers:
      - name: cert-controller
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        image: ghcr.io/external-secrets/external-secrets:v0.9.13
        imagePullPolicy: IfNotPresent
        args:
        - certcontroller
        - --crd-requeue-interval=5m
        - --service-name=external-secrets-webhook
        - --service-namespace=external-secrets
        - --secret-name=external-secrets-webhook
        - --secret-namespace=external-secrets
        - --metrics-addr=:8080
        - --healthz-addr=:8081
        ports:
        - containerPort: 8080
          protocol: TCP
          name: metrics
        - containerPort: 8081
          protocol: TCP
          name: healthz
        readinessProbe:
          httpGet:
            port: 8081
            path: /readyz
          initialDelaySeconds: 20
          periodSeconds: 5
        resources:
          requests:
            cpu: "10m"
            memory: "32Mi"
          limits:
            cpu: "50m"
            memory: "64Mi"
