vm-builder-templates/apps/external-secrets/k8s-base/eso-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets
  namespace: external-secrets
  labels:
    app.kubernetes.io/name: external-secrets
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/version: "v0.9.13"
    app.kubernetes.io/component: controller
    app.kubernetes.io/part-of: golden-master
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: external-secrets
      app.kubernetes.io/instance: external-secrets
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-secrets
        app.kubernetes.io/instance: external-secrets
        app.kubernetes.io/version: "v0.9.13"
        app.kubernetes.io/component: controller
        app.kubernetes.io/part-of: golden-master
    spec:
      serviceAccountName: external-secrets
      automountServiceAccountToken: true
      hostNetwork: false
      containers:
      - name: external-secrets
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        image: ghcr.io/external-secrets/external-secrets:v0.9.13
        imagePullPolicy: IfNotPresent
        args:
        - --concurrent=1
        - --metrics-addr=:8080
        ports:
        - containerPort: 8080
          protocol: TCP
          name: metrics
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
